# neuros

./: Implementation Plan.md  README.md  requirements.txt  setup.cfg  setup.py
neuros/: data_processor.py  data_streamer.py  main.py  power_visualizer.py  processing.py  tone_generator.py
neuros/audio/: output.py  synthesizer.py  tuner.py  waveforms.py
neuros/board/: board_interface.py
src/neuros/: __main__.py  eeg_reader.py  neuroboard.py  tone.py  tone_generator.py
tests/: test_board_interface_basic.py  test_board_interface_channels.py  test_data_processing_basic.py  test_data_processing_synthetic_board.py  test_neuroboard.py  test_output.py  test_process_data.py  test_process_synthetic_data.py  test_raw_data.py  test_streaming_advanced.py  test_streaming_basic.py  test_streams.py  test_synthesizer.py  test_tuner.py  test_waveforms.py  test_window_streams.py
