# https://docs.python.org/3.11/distutils/configfile.html

[metadata]
name = neuros
version = 0.1.dev
author = Eric Hennigan
description = Audio feedback of brainwaves
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python
url = https://github.com/EricHennigan/neuros/
license = GPL-3.0 license

[options]
include_package_data = True
packages = find_namespace:
package_dir =
    = src

#[options.package_data]
#neuros.data =
#    *.sf2

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
install =
    numpy
    brainflow
    pyfluidsynth
